--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,5 @@
   ],
   "wpilib.deployOffline": true,
   "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx16G -Xms100m -Xlog:disable",
-  "wpilib.autoStartRioLog": false
+  "wpilib.autoStartRioLog": true
 }
